# django-python-ares-backend

./: .gitignore  README.md  index.fcgi  manage.py  pyproject.toml
.github/workflows/: deploy.yml
aresbackend/: asgi.py  settings.py  urls.py  wsgi.py
aresbackend/apps/: apiconfigs.py
aresbackend/apps/forms/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
aresbackend/apps/forms/migrations/: 0001_initial.py  0002_alter_budgetform_options.py  0002_alter_budgetform_options_budgetform_description.py  0003_alter_budgetform_description_alter_budgetform_email.py
