[tool.poetry]
name = "src"
version = "0.1.0"
description = "poetry-ares"
authors = ["rafaelwildfire <rafaelwildfire@gmail.com>"]
license = "ares-technology"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
dj-database-url = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
