[tool.poetry]
name = "src"
version = "0.1.0"
description = "poetry-ares"
authors = ["rafaelwildfire <rafaelwildfire@gmail.com>"]
license = "ares-technology"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
dj-database-url = "^2.0.0"
django-cors-headers = "^4.2.0"
djangorestframework-camel-case = "^1.4.2"
mysqlclient = "^2.2.0"
whitenoise = "^6.5.0"
gunicorn = "^21.2.0"
flup = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
